src/plugins/controls/public/options_list/components/options_list.scss
.optionsList--filterGroup {
  width: 100%;
  box-shadow: none;
  background-color: transparent;

  .optionsList__inputButtonOverride {
    max-inline-size: none; // overwrite the default `max-inline-size` that's coming from EUI
  }

  .optionsList--filterBtn {
    height: $euiButtonHeight;

    &.optionsList--filterBtnPlaceholder {
      color: $euiTextSubduedColor;
      font-weight: $euiFontWeightRegular;
    }

    .optionsList__filter {
      font-weight: $euiFontWeightMedium;
    }

    .optionsList__filterInvalid {
      color: $euiColorWarningText;
    }

    .optionsList__negateLabel {
      font-weight: $euiFontWeightSemiBold;
      font-size: $euiSizeM;
      color: $euiColorDanger;
    }

    .optionsList--selectionText {
      flex-grow: 1;
      text-align: left;
    }
  }

}

.optionsList--sortPopover {
  width: $euiSizeXL * 7;
}

.optionsList__existsFilter {
  font-style: italic;
  font-weight: $euiFontWeightMedium;
}

.optionsList__popoverOverride {
  @include euiBottomShadowMedium;
  filter: none; // overwrite the default popover shadow
}

.optionsList__popover {
  .optionsList__actions {
    padding: 0 $euiSizeS;
    border-bottom: $euiBorderThin;
    border-color: darken($euiColorLightestShade, 2%);

    .optionsList__searchRow {
      padding-top: $euiSizeS
    }

    .optionsList__actionsRow {
      margin: calc($euiSizeS / 2) 0 !important;

      .optionsList__actionBarDivider {
        height: $euiSize;
        border-right: $euiBorderThin;
      }
    }
  }

  .optionsList-control-ignored-selection-title {
    padding-left: $euiSizeS;
  }

  .optionsList__selectionInvalid {
    color: $euiColorWarningText;
  }

  .optionslist--loadingMoreGroupLabel {
    text-align: center;
    padding: $euiSizeM;
    font-style: italic;
    height:  $euiSizeXXL !important;
  }

  .optionslist--endOfOptionsGroupLabel {
    text-align: center;
    font-size: $euiSizeM;
    height:  auto !important;
    color: $euiTextSubduedColor;
    padding: $euiSizeM;
  }
}

